# EOL

./: .git_commit_msg.txt  .gitignore  .verinfo  CODE_OF_CONDUCT.md  Cargo.toml  Cavvy_Language_Reference.md  QUICK_START.md  README.md  README_EN.md  ROADMAP.md  ReleaseNotes_v0.5.0.0.md  build.rs  cavvy.ebnf  oxin.toml  release.ps1  setup-llvm.ps1  setup-llvm.sh  test_error.eol  test_output_all.txt  test_preproc_simple.py  test_roadmap_045.sh  test_sockaddr.c
caylibs/: Allocator.cay  EasyHTTP.cay  File.cay  IOPlus.cay  Network.cay  Network.cay.bak  StringBuilder.cay
docs/: ffi-guide.md  language-guide.md  quickstart.md  syntax-reference.md
examples/: easyhttp_demo.cay  easyhttp_demo.pre.cay  file_simple_test.cay  file_test.cay  line_number_test.cay  test_0_4_1_features.cay  test_0_4_3_basic.cay  test_0_4_3_simple.cay  test_0_4_8_features.cay  test_0_5_0_allocator.cay  test_allocator_import.cay  test_analyze.cay  test_append.cay  test_array_index_expression.cay  test_array_jagged.cay  test_cay_run.cay  test_cay_run_args.cay  test_chain_call.cay  test_char.cay  test_debug.cay  test_easyhttp_simple.cay  test_extern_basic.cay  test_extern_calling_convention.cay  test_ffi_abs.cay  test_ffi_extern_call.cay  test_ffi_math.cay  test_ffi_pointers.cay  test_ffi_simple.cay  test_ffi_strlen.cay  test_ffi_types.cay  test_file_all.cay  test_file_basic.cay  test_file_lines.cay  test_file_modes.cay  test_file_seek.cay  test_file_static.cay  test_file_utils.cay  test_format_debug.cay  test_format_more.cay  test_format_print.cay  (+37 more)
examples/errors/: error_array_index_type.eol  error_break_outside_loop.eol  error_continue_outside_loop.eol  error_invalid_cast.eol  error_invalid_operator.cay  error_missing_main.eol  error_redefined_variable.eol  error_string_plus_float.eol  error_string_plus_int.eol  error_type_mismatch_assign.eol  error_undefined_variable.eol
src/: ast.rs  error.rs  lib.rs  miette_diagnostic.rs  types.rs
src/bytecode/: linker.rs
src/cavly/: builder.rs  config.rs  (+4 more)
test_docs/: debug_program.cay  ffi_basic.cay  ffi_basic_test.cay  ffi_math.cay  ffi_math_test.cay  ffi_memory.cay  ffi_memory_test.cay  ffi_network_test.cay  ffi_stdio.cay  ffi_stdio_test.cay  ffi_string.cay  ffi_string_test.cay  ffi_time.cay  ffi_time_test.cay  integer_parseint_test.cay  language_arrays.cay  language_control_flow.cay  language_functions.cay  language_guide_functions.cay  language_guide_oop.cay  language_guide_program_structure.cay  language_guide_scope_test.cay  language_guide_snippets.cay  language_oop.cay  language_operators.cay  language_type_cast.cay  multi_statement.cay  quickstart_array.cay  quickstart_class.cay  quickstart_class_test.cay  quickstart_control_flow.cay  quickstart_hello_args.cay  quickstart_hello_args_real.cay  quickstart_hello_class.cay  quickstart_hello_toplevel.cay  quickstart_inheritance.cay  quickstart_inheritance_test.cay  quickstart_snippets.cay  quickstart_variables.cay  string_valueof_test.cay  (+2 more)
tests/: allocator_tests.rs  doc_tests.rs  ffi_c_ptr_tests.rs  ffi_full_tests.rs  ffi_void_ptr_tests.rs  integration_tests.rs  network_tests.rs  type_system_tests.rs  type_tests.rs
vscode-extension/: package-lock.json  package.json
(+60 files in other folders)
