[package]
name = "cavvy"
version = "0.4.8"
edition = "2024"

[dependencies]
thiserror = "2.0"
anyhow = "1.0"
logos = "0.15"
miette = { version = "7.5", features = ["fancy"] }

# Windows平台构建所有bin（包括依赖MinGW的ir2exe）
[[bin]]
name = "cayc"
path = "src/bin/cayc.rs"

[[bin]]
name = "cay-ir"
path = "src/bin/cay-ir.rs"

[[bin]]
name = "ir2exe"
path = "src/bin/ir2exe.rs"

[[bin]]
name = "cay-check"
path = "src/bin/cay-check.rs"

[[bin]]
name = "cay-run"
path = "src/bin/cay-run.rs"

[[bin]]
name = "cay-rcpl"
path = "src/bin/cay-rcpl.rs"

[[bin]]
name = "cay-bcgen"
path = "src/bin/cay-bcgen.rs"
