[package]
name = "cavvy"
# 请注意，自5.1.0-a.1开始，版本号已经改了
version = "5.1.0-a.2"
edition = "2024"

[dependencies]
thiserror = "2.0"
anyhow = "1.0"
logos = "0.15"
miette = { version = "7.5", features = ["fancy"] }

# GUI dependencies for cay-idle
eframe = { version = "0.29", default-features = false, features = ["default_fonts", "glow"] }
egui = "0.29"
egui_extras = "0.29"
rfd = "0.14"

# LSP dependencies for cay-lsp
tower-lsp = "0.20"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dashmap = "5.0"
env_logger = "0.11"

# Cavly dependencies
toml = "0.8"
tempfile = "3.0"

# Windows平台构建所有bin（包括依赖MinGW的ir2exe）
[[bin]]
name = "cayc"
path = "src/bin/cayc.rs"

[[bin]]
name = "cay-ir"
path = "src/bin/cay-ir.rs"

[[bin]]
name = "ir2exe"
path = "src/bin/ir2exe.rs"

[[bin]]
name = "cay-check"
path = "src/bin/cay-check.rs"

[[bin]]
name = "cay-run"
path = "src/bin/cay-run.rs"

[[bin]]
name = "cay-rcpl"
path = "src/bin/cay-rcpl.rs"

[[bin]]
name = "cay-bcgen"
path = "src/bin/cay-bcgen.rs"

[[bin]]
name = "cay-idle"
path = "src/bin/cay-idle.rs"

[[bin]]
name = "cay-lsp"
path = "src/bin/cay-lsp.rs"

[[bin]]
name = "cavly"
path = "src/bin/cavly.rs"

[[bin]]
name = "cay-dt"
path = "src/bin/cay-dt.rs"

[[bin]]
name = "cay-dp"
path = "src/bin/cay-dp.rs"
